# nilo

./: .gitignore  Cargo.toml  FONT_USAGE.md  LANGUAGE_SPEC.md  LAYOUT_DIFF.md  README.md  RENDERER_OPTIMIZATION.md  RESPONSIVE_DESIGN.md  build_wasm.ps1  build_wasm.rs  build_wasm_with_html.rs  dom_output.html
.cargo/: config.toml
_reference/: COMPONENT_SPEC.md  CUSTOM_FONT_USAGE.md  DIFF_IMPLEMENTATION_SUMMARY.md  DYNAMIC_SECTION.md  LANGUAGE_SPEC.md  LAYOUT_SYSTEM_NEW.md  NILO_STATE_PROC_MACROS.md  NILO_STATE_USAGE.md  ONCLICK_IMPLEMENTATION.md  SAFE_STATE_ACCESS.md  TYPED_FUNCTION_REGISTRATION.md  WASM_IMPLEMENTATION.md  _reference.md
examples/: async_fetch.nilo  async_fetch_example.rs  calc.nilo  calc.rs  calc_example.rs  chat_example.nilo  chat_example.rs  custom_font_example.rs  dom_renderer_example.rs  dynamic_section_example.nilo  inputtest_example.rs  interval_example.nilo  interval_example.rs  onclick_example.rs  onclick_simple.rs  simple_todo.nilo  simple_todo_example.rs  todo.nilo  todo_example.rs
nilo_state_access_derive/: Cargo.toml
nilo_state_access_derive/src/: lib.rs
spa_server/: Cargo.toml  README.md
spa_server/src/: main.rs
src/: app.nilo  demo.nilo  dynamic_foreach_test.nilo  dynamic_ui_test.nilo  handler.rs  hotreload.rs  lib.rs  list_operations_test.nilo  main.rs  onclick_test.nilo  routing_test.nilo  startup.nilo  test.nilo  test_control_flow.nilo  test_rust_call.nilo  tutorial.nilo  wasm_entry.rs
src/analysis/: component_validator.rs  error.rs  lint.rs  mod.rs  state_type_checker.rs
src/dom_renderer/: dom.rs  mod.rs
src/engine/: async_call.rs  diff_system.rs  engine.rs  exec.rs  mod.rs  routing.rs  runtime.rs  runtime_dom.rs  runtime_hotreload.rs  rust_call.rs  state.rs  state.rs.orig  timeline_processor.rs
src/engine/core/: component.rs  core.rs  dynamic_section.rs  event.rs  flow.rs  layout.rs  mod.rs  render.rs  utils.rs
src/parser/: ast.rs  component.rs  expr.rs  flow.rs  grammar.pest  mod.rs  namespace.rs  parse.rs  parse_backup.rs  style.rs  timeline.rs  types.rs  utils.rs  view_node.rs
src/renderer/: circle.rs  command.rs  image.rs  mod.rs  quad.rs  text.rs  triangle.rs  wgpu.rs
src/renderer_abstract/: abstract_renderer.rs  command.rs  mod.rs
src/shaders/: circle.wgsl  image.wgsl  quad.wgsl  triangle.wgsl  unified.wgsl
src/stencil/: mod.rs  stencil.rs
src/ui/: event.rs  layout.rs  layout_cache.rs  layout_diff.rs  layout_foreach_fix.rs  layout_integration.rs  layout_new.rs  layout_wrapper.rs  mod.rs  text_measurement.rs  text_measurement_wasm.rs  viewport.rs
src/wasm/: browser_editor.rs  index.html  mod.rs
src/wgpu_renderer/: circle.rs  image.rs  mod.rs  perf_monitor.rs  quad.rs  text.rs  triangle.rs  unified.rs  wgpu.rs
templates/: editor.html
