[package]
name = "nilo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wgpu = {  version = "26.0.1", features = ["webgpu"] }
winit = { version = "0.30", features = ["rwh_05"] }
pollster = "0.3"
env_logger = "0.11.8"
bytemuck = "1.23.1"
glyphon = { git = "https://github.com/grovesNL/glyphon.git", branch = "main" }
pest = "2.8.1"
pest_derive = "2.8.1"
image = "0.25.6"
resvg = "0.43"
tiny-skia = "0.11"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
colored = "2"
lazy_static = "1.5.0"
notify = "6.1"
# syn = { version = "2", features = ["full"] }
# quote = "1"
# proc-macro2 = "1"
nilo_state_access_derive = { path = "./nilo_state_access_derive" }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4.50"
log = "0.4.27"
