[package]
name = "nilo"
version = "0.1.0"
edition = "2024"
default-run = "nilo"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nilo"
path = "src/main.rs"

[[bin]]
name = "build_wasm_with_html"
path = "build_wasm_with_html.rs"
required-features = ["native"]

[dependencies]
# Native専用の依存関係
wgpu = { version = "26.0.1", features = ["webgpu"], optional = true }
winit = { version = "0.30", features = ["rwh_05"], optional = true }
pollster = { version = "0.3", optional = true }
glyphon = { git = "https://github.com/grovesNL/glyphon.git", branch = "main", optional = true }
colored = { version = "2", optional = true }
notify = { version = "6.1", optional = true }
open = { version = "5.3", optional = true }

# 共通の依存関係
env_logger = "0.11.8"
bytemuck = "1.23.1"
pest = "2.8.1"
pest_derive = "2.8.1"
image = "0.25.6"
resvg = "0.43"
tiny-skia = "0.11"
serde_json = "1.0.142"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
nilo_state_access_derive = { path = "./nilo_state_access_derive" }
log = "0.4.27"
regex = "1.11"
linkme = "0.3"

# WASM専用の依存関係
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", 
    "Window", 
    "Document", 
    "HtmlElement", 
    "MouseEvent",
    "History",
    "Location",
    "WheelEvent",
    "CssStyleDeclaration",
    "Element",
    "HtmlImageElement",
    "Node"
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
placeholder = { version = "1.1.4", optional = true }
console_log = { version = "1.0", optional = true }

[features]
default = ["native"]
native = ["wgpu", "winit", "pollster", "glyphon", "colored", "notify", "open"]
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook", "wasm-bindgen-futures", "placeholder", "console_log"]

[build]
incremental = true

[env]
CARGO_INCREMENTAL=1
RUSTFLAGS = "-C codegen-units=256"